Change "Guest" to "Away" in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="display-container">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h1 id="score-guest">0</h1>
                 <div class="buttons">
                     <p class="add1-btn-guest" onclick="oneGuest()">+1</p>
